[ci] Cleanup code issues pointed out by modernizer